[project]
name = "LlamaIndex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "llama-index>=0.14.22",
    "chromadb>=1.5.9",
    "llama-index-tools-yahoo-finance>=0.5.0",
    "llama-index-tools-tavily-research>=0.5.0",
]
